--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {%extends "layout.html"%}
 {%block content%}
 <div class="home">
-    <h1>This is a test website</h1>
+    <h1>Czesc Misku!</h1>
+    <p>Milego dnia Kotku psotku</p>
 </div>
 
 {%endblock%}
